@@ -9,6 +9,8 @@ Change log:
 - Add Action Bar Sherlock
 - New About Page
 - Added in house ads. Only show if enabled in settings (true by default for free, false for donate)
+- Add exception handling / error reporting
+- Bumped min api to 4
 
 * 1.2 - December 11th, 2010
 - Updated main layout: now includes a CLEAR and Calculate! button
